# japan-crypto-information

./: .env.example  .gitignore  DEPLOY_RENDER.md  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  server.js  test-ex.js  test-fetch.js  test-flow.js  test-ws.js  wrangler.jsonc
content/: about.md  bnb.md  broker-loss-reasons.md  btc.md  buying-100k-points.md  crypto-fees.md  crypto-withdrawal-fees.md  doge.md  eth.md  exchange-checklist.md  exchange-company-analysis.md  exchange-vs-broker.md  how-to-compare-exchanges.md  hype.md  jpy-withdrawal-fees.md  leo.md  link.md  market-order-risk.md  order-book-trading.md  slippage.md  sol.md  spread.md  trx.md  usdc.md  usdt.md  xlm.md  xmr.md  xrp.md  zec.md
data/: sales-spread-history.json  volume-share-history.json
insight_engine/: __init__.py  cli.py  insights.py  metrics.py  renderers.py  schemas.py
lib/: analytics-store.js  binance-japan-client.js  bitbank-client.js  bitbank-sales-client.js  bitflyer-client.js  bitflyer-sales-client.js  bittrade-client.js  bittrade-sales-client.js  campaigns.js  coincheck-client.js  coincheck-sales-client.js  content.js  crypto-asset-balance-data.js  data-storage.js  exchange-page-content.js  exchanges.js  financial-comparison-data.js  gmo-client.js  gmo-sales-client.js  google-sheets-state-store.js  head-meta.js  impact-calculator.js  market-research-content.js  market-visual-research-content.js  neon-state-store.js  okcoin-client.js  okj-sale-client.js  orderbook.js  sales-spread-insights.js  sales-spread-store.js  schema.js  snapshot-coverage.js  (+3 more)
(+77 files in other folders)
