[project]
name = "okj-insight-engine"
version = "0.1.0"
description = "Rule-based Japanese insight generator for exchange volume-share data"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["insight_engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
